update title, subtitle

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>MY TITLE</title>
+  <title>RLC4</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
     @keyframes botBobLeft {
@@ -286,8 +286,8 @@
         </svg>
       </div>
 
-      <h1 class="text-4xl font-bold tracking-tight text-white sm:text-6xl">MY TITLE</h1>
-      <p class="mt-3 text-lg text-slate-300 sm:text-xl">Coming Soon</p>
+      <h1 class="text-4xl font-bold tracking-tight text-white sm:text-6xl">Robotic Labs Cell Four</h1>
+      <p class="mt-3 text-lg text-slate-300 sm:text-xl">Covert motion. Classified logistics. Exact outcomes.</p>
     </section>
   </main>
 </body>
