--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>RLC4</title>
+  <title>RL/C4</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
     @keyframes statusCursor {
@@ -85,10 +85,10 @@
 
     <section class="relative w-full max-w-5xl text-center">
 
-      <h1 class="text-4xl font-bold tracking-tight text-white sm:text-6xl">Research Labs Command Four</h1>
+      <h1 class="text-4xl font-bold tracking-tight text-white sm:text-6xl">Research Labs / Command Four</h1>
       <p class="mt-3 text-lg text-slate-300 sm:text-xl">Probe. Map. Breach. Control.</p>
       <p class="mx-auto mt-4 max-w-3xl text-sm leading-6 text-slate-400 sm:text-base">
-        RLC/4 manages compartmentalized telemetry, correlation, and access-control workflows for denied
+        RL/C4 manages compartmentalized telemetry, correlation, and access-control workflows for denied
         environments, translating transient signals into mapped systems, verified footholds, and dormant command
         channels under strict need-to-know authority. Program scope, operator identities, and execution records
         remain restricted by design; observable outputs are intentionally limited to status confirmation, control
@@ -96,7 +96,7 @@
       </p>
       <div class="terminal-panel mx-auto mt-5 max-w-3xl text-left font-mono text-xs sm:text-sm">
         <div class="flex items-center justify-between border-b border-emerald-300/10 bg-slate-900/70 px-4 py-2 text-[10px] uppercase tracking-[0.2em] text-emerald-200/70 sm:text-xs">
-          <span>RLC/4 Telemetry Console</span>
+          <span>RL/C4 Telemetry Console</span>
           <span class="text-emerald-300/50">LIVE</span>
         </div>
         <div class="px-4 py-3 tracking-wide text-emerald-100/90">
